<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical" >
    
	<View 
		android:background="#c8c8c8"
		android:layout_width="match_parent"
		android:layout_height="@dimen/myprofile_line_height"
		android:layout_marginTop="@dimen/myprofile_topMargin"
		/>
	
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/myprofile_item_height"
	    android:layout_marginLeft="@dimen/myprofile_leftMargin"
	    >
	    <EditText
			android:layout_centerVertical="true"
			android:id="@+id/et_old_password"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="textPassword"
			android:hint="@string/old_password"
			android:background="@null"
			android:singleLine="true"
			android:textColor="@color/toast_text"
			android:textColorHint="@color/toast_text"
			android:textSize="18sp" />
	</RelativeLayout>
	<View 
		android:background="#c8c8c8"
		android:layout_width="match_parent"
		android:layout_height="@dimen/myprofile_line_height"
		android:layout_marginLeft="@dimen/myprofile_leftMargin"
		/>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/myprofile_item_height"
	    android:layout_marginLeft="@dimen/myprofile_leftMargin"
	    >
	    <EditText
			android:layout_centerVertical="true"
			android:id="@+id/et_new_password"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="textPassword"
			android:hint="@string/new_password"
			android:background="@null"
			android:singleLine="true"
			android:textColor="@color/toast_text"
			android:textColorHint="@color/toast_text"
			android:textSize="18sp" />
	</RelativeLayout>
	<View 
		android:background="#c8c8c8"
		android:layout_width="match_parent"
		android:layout_height="@dimen/myprofile_line_height"
		android:layout_marginLeft="@dimen/myprofile_leftMargin"
		/>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/myprofile_item_height"
	    android:layout_marginLeft="@dimen/myprofile_leftMargin"
	    >
	    <EditText
			android:layout_centerVertical="true"
			android:id="@+id/et_password_check"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="textPassword"
			android:hint="@string/new_password_check"
			android:background="@null"
			android:singleLine="true"
			android:textColor="@color/toast_text"
			android:textColorHint="@color/toast_text"
			android:textSize="18sp" />
	</RelativeLayout>
	<View 
		android:background="#c8c8c8"
		android:layout_width="match_parent"
		android:layout_height="@dimen/myprofile_line_height"
		/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/password_format"
	    android:textColor="@color/color_gray"
	    android:textSize="18sp"
	    android:layout_marginTop="10dp"
	    android:layout_gravity="center_horizontal"
	    />
</LinearLayout>
