<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp" >

		<ImageView
	        android:id="@+id/iv_username"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:src="@drawable/icon_account" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_username"
            android:layout_marginLeft="11dp"
            android:background="@null"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/color_gray"
			android:textColorHint="@color/color_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_gray" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" >
        <ImageView
            android:id="@+id/iv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_code" />
        <Button 
            android:id="@+id/btn_get_code"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/get_code"
            android:textSize="18sp"
            android:textColor="@color/color_white"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/button_code"
            />
        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_code"
            android:layout_toLeftOf="@id/btn_get_code"
            android:layout_marginLeft="11dp"
            android:background="@null"
            android:hint="@string/code_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/color_gray"
			android:textColorHint="@color/color_gray"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_gray" />
    </RelativeLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:onClick="bindMobile"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:text="@string/ok"
        android:textColor="@color/color_white"
        android:textSize="20sp" />
</LinearLayout>
